// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Text Area Default smoke-test 1`] = `
<div style="position: relative; width: 100%; height: 300px; display: flex; align-items: center; justify-content: center;">
  <div style="width: 400px;">
    <div class="_textArea_1mqdn_1">
      <label>
        <div class="_label_1mqdn_93 dark:text-white">
          <div>
            Address
          </div>
        </div>
        <textarea placeholder="Enter your address"
                  autocomplete="off"
                  class="dark:border-primary-400 dark:focus:border-white"
        >
        </textarea>
      </label>
    </div>
  </div>
</div>
`;

exports[`Components/Text Area ErrorTextarea smoke-test 1`] = `
<div style="position: relative; width: 100%; height: 300px; display: flex; align-items: center; justify-content: center;">
  <div style="width: 400px;">
    <div class="_textArea_1mqdn_1 _inputError_1mqdn_75">
      <label>
        <div class="_label_1mqdn_93">
          <div>
            Address
          </div>
        </div>
        <textarea placeholder="Enter your address"
                  autocomplete="off"
                  class
        >
        </textarea>
        <div class="_errorText_1mqdn_125">
          Address is required
        </div>
      </label>
    </div>
  </div>
</div>
`;
